--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,12 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        ".",
+        "./Testing",
         "-p",
         "*_test.py"
     ],
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
     "python.testing.pytestArgs": [
         "."
     ]
