--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File",
+            "name": "Normal Exec",
             "type": "debugpy",
             "request": "launch",
             "program": "Main.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
         }
     ]
 }
